expense-app/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office 1</fullName>
                </value>
                <value>
                    <fullName>Office 2</fullName>
                </value>
                <value>
                    <fullName>Office 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Telegram_ID__c</fullName>
        <label>Telegram ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telegram_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telegram Log</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>